--- a/src/app/core/layout/pages/report/reportitem/reportitem.component.html
+++ b/src/app/core/layout/pages/report/reportitem/reportitem.component.html
@@ -44,7 +44,7 @@
                 <tbody>
                   <!-- Use ngFor to loop through facultyMatrices -->
                   <tr *ngFor="let faculty of facultyMatrices" class="hover:bg-gray-100">
-                    <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.name }}</td>
+                    <td class="border border-gray-300 px-3 py-2 whitespace-nowrap">{{ faculty.name }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.position }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.tenure }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">
