--- a/src/app/core/layout/pages/chatwithai/chatwithai.component.html
+++ b/src/app/core/layout/pages/chatwithai/chatwithai.component.html
@@ -1,8 +1,13 @@
-
 <app-navigation></app-navigation>
 <!-- component -->
+    
 <div class="flex h-screen justify-center items-center antialiased text-gray-800 ml-60">
+    <div  class="flex  items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white group ml-10">
+        <img src="../../assets/img/Robot.png" alt="edit logo" class="w-32 h-32 rounded-full">
+        
+       </div>
     <div class="flex flex-col p-6" style="max-width: 1000px;">
+        
         <div class="flex flex-col flex-auto flex-shrink-0 rounded-2xl bg-gray-100 p-4">
 
             <!-- Chat wrapper -->
@@ -11,9 +16,7 @@
                 <!-- Chat messages here -->
                 <div class="col-start-1 col-end-8 p-3 rounded-lg mr-8">
                     <div class="flex flex-row items-center">
-                        <div class="flex items-center justify-center  bg-gray-200 rounded-full flex-shrink-0">
-                            <img src="../../assets/img/hacker.png" alt="back logo" class="w-10 h-10 rounded-full">
-                        </div>
+                       
                         <div class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl whitespace-pre-line"
                             style="min-width: 200px;">
                             <div class=" max-height-150px overflow-y-auto">
