--- a/src/app/core/layout/pages/report/reportview/reportview.component.html
+++ b/src/app/core/layout/pages/report/reportview/reportview.component.html
@@ -1,3 +1,4 @@
+Updated Report View.txt
 <app-navigation-bar></app-navigation-bar>
 <div class="antialiased">
 
@@ -55,15 +56,15 @@
                     <th class="border border-gray-300 px-3 py-2">Membership Organization</th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let faculty of facultyMatrices"  >
+                <tbody *ngFor="let faculty of facultyMatrices overflow-x-auto"  >
                   <!-- Use ngFor to loop through facultyMatrices -->
                   <tr class="hover:bg-gray-100">
                     <button (click)="navigateToEditFacultyMatrix(faculty.faculty_matrix_id)"
-                      class="mt-4 bg-white hover:bg-gray-200 border border-gray-300 text-black font-bold py-2 px-4 rounded ">Edit</button>
+                    class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700 mt-5 ml-2">Edit</button>
                     <br>
                     <button (click)="navigateToDeleteFacultyMatrix(faculty.faculty_matrix_id)"
-                      class="mt-4 bg-white hover:bg-gray-200 border border-gray-300 text-black font-bold py-2 px-4 mx-[-10px] mr-2 rounded">Delete</button>
-                    <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.name }}</td>
+                    class="text-white bg-orange-500 hover:bg-orange-900 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-3 mb-3">Delete</button>
+                    <td class="border border-gray-300 px-3 py-2 whitespace-normal sm:whitespace-nowrap">{{ faculty.name }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.position }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">{{ faculty.tenure }}</td>
                     <td class="border border-gray-300 px-3 py-2 whitespace-normal">
