--- a/src/app/core/layout/pages/workspace/joinworkspace/joinworkspace.component.html
+++ b/src/app/core/layout/pages/workspace/joinworkspace/joinworkspace.component.html
@@ -9,17 +9,17 @@
                             Join Workspace
                         </h3>
 
-
                         <label for="workspaceId"
                             class="block mb-2 text-sm font-bold text-gray-900 dark:text-white">Workspace Id</label>
                         <input type="text" id="workspaceId" [(ngModel)]="userWorkspaceData.workspace_id"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block mb-3 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="Workspace" required />
+                            <span class="text-red-600">{{ error }}</span>
                     </div>
                 </div>
             </div>
             <div class="flex justify-center mt-5 sm:mt-6">
-                <button type="button" (click)="createUserWorkspace()"
+                <button type="button" (click)="joinUserWorkspace()"
                     class="text-white bg-black hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
                     join
                 </button>
