--- a/src/app/core/layout/pages/workspace/workspacelist/workspacelist.component.html
+++ b/src/app/core/layout/pages/workspace/workspacelist/workspacelist.component.html
@@ -1,11 +1,10 @@
 <div class="antialiased">
 
-    <main class="p-4 md:mx-[35px] h-auto pt-20">
+    <main class="p-4 md:mx-[35px] h-auto pt-20 mt-5">
       <!--Fist Container -->
       <div class=" h-96 mb-4">
   
         <h1 class="text-2xl font-bold mb-[30px] text-start mt-5">Workspaces</h1>
-        <hr class="h-px my-2 mx-16">
   
         <!-- Start block -->
         <section class="bg-gray-50 antialiased">
@@ -13,22 +12,22 @@
             <div class="bg-white relative shadow-md sm:rounded-lg">
   
               <div
-                class="flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between mx-4 py-4 border-t dark:border-gray-700">
+                class="flex flex-col md:flex-row items-stretch md:items-center md:space-x-3 space-y-3 md:space-y-0 justify-between mx-4 py-4 dark:border-gray-700">
                 <div class="w-full md:w-1/2">
-                  <form class="flex items-center">
-                    <label for="simple-search" class="sr-only">Search</label>
-                    <div class="relative w-full">
-                      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
-                          viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
+                  <div class="relative w-full">
+                    <div
+                        class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400"
+                            fill="currentColor" viewbox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
                         </svg>
-                      </div>
-                      <input type="text" id="simple-search" placeholder="Search for workspaces" required
-                        class="bg-gray-50 border border-gray-300 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-primary-500 dark:focus:border-primary-500">
                     </div>
-                  </form>
+                    <input type="text" [(ngModel)]="workspace_filter" (keydown.enter)="searchWorkspace()"
+                        id="simple-search" placeholder="Search for workspaces"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-primary-500 dark:focus:border-primary-500">
+                </div>
                 </div>
 
                 <div
@@ -69,10 +68,9 @@
                           <h2>{{ workspace.name }}</h2>
                         </div>
                       </td>
-                      <td scope="row" class="py-2 px-6  font-medium whitespace-nowrap ">
-                        <div class="flex items-center justify-center text-center">
-  
-                          <h2>{{ workspace["role"] }}</h2>
+                      <td scope="row" class="py-2  px-6  font-medium whitespace-nowrap ">
+                        <div class="flex items-center justify-start">
+                          <h2>{{ workspace.role_name }}</h2>
                         </div>
                       </td>
                       <td class="px-6 py-3 font-medium whitespace-nowrap">
@@ -93,21 +91,20 @@
                             <img src="../../../../../../assets/img/eye.png" alt="edit logo" class="w-5 h-5">
                             <span>Open</span>
                           </button>
-                          
-                          <button  *ngIf="workspace['role'] === 'super admin'" type="button" (click)="editWorkspace(workspace['workspace_id'])"
+                          <button  *ngIf="workspace['role_name'] === 'superadmin'" type="button" (click)="editWorkspace(workspace['workspace_id'])"
                           class="py-2 px-3 flex items-center text-sm font-medium text-black text-center bg-white border border-gray-300 rounded-lg hover:text-blue-500 focus:ring-4  dark:bg-primary-600 dark:hover:bg-primary-700 gap-2">
                             <img src="../../../../../../assets/img/edit-icon.png" alt="edit logo" class="w-5 h-5">
                             <span>Edit</span>
                           </button>
-                          <button *ngIf="workspace['role'] === 'super admin'" type="button" (click)="deleteWorkspace(workspace['workspace_id'])"
+                          <button *ngIf="workspace['role_name'] === 'superadmin'" type="button" (click)="deleteWorkspace(workspace['workspace_id'])"
                             class="flex items-center text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2 text-center ">
                             <img src="../../../../../../assets/img/delete.png" alt="edit logo" class="w-5 h-5">
-                            <span>Delete</span> <!-- change to leave when not superadmin -->
+                            <span>Delete</span> <!-- change to leave when not1-->
                           </button>
-                          <button *ngIf="workspace['role'] !== 'super admin'" type="button" (click)="leaveWorkspace(workspace['workspace_id'])"
+                          <button *ngIf="workspace['role_name'] !== 'superadmin'" type="button" (click)="leaveWorkspace(workspace['workspace_id'])"
                           class="flex items-center text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2 text-center ">
                           <img src="../../../../../../assets/img/exit.png" alt="leave logo" class="w-5 h-5 pr-1">
-                          <span>Leave</span> <!-- change to leave when not superadmin -->
+                          <span>Leave</span> <!-- change to leave when not1-->
                         </button>
                         </div>
                       </td>
