--- a/src/app/shared/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/navigation-bar/navigation-bar.component.html
@@ -41,9 +41,9 @@
                     </li>
 
                     <li>
-                        <a (click)="signOut()"
-                            class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                            role="menuitem">Sign out</a>
+                        <button (click)="signOut()"
+                            class="block px-4 py-2 text-sm text-gray-700 w-full text-start hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                            role="menuitem">Sign out</button>
                     </li>
                 </ul>
             </div>
