--- a/src/app/core/layout/pages/authentication/register/register.component.html
+++ b/src/app/core/layout/pages/authentication/register/register.component.html
@@ -7,7 +7,7 @@
                 Anuwrap
             </a>
         </div>
-        <form (ngSubmit)="registerUser()" class="flex flex-col items-center">
+        <form (ngSubmit)="registerUser()" class="flex flex-col items-center" method="post">
             <div class="grid gap-6 mb-6 md:grid-cols-2 max-w-screen-md ">
                 <div class="mb-4">
                     <label for="username"
