--- a/src/app/core/layout/pages/authentication/login/login.component.html
+++ b/src/app/core/layout/pages/authentication/login/login.component.html
@@ -12,7 +12,7 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                     Sign in
                 </h1>
-                <form (ngSubmit)="login()" class="space-y-4 md:space-y-6" method="post">
+                <form (ngSubmit)="login()" class="space-y-4 md:space-y-6">
                     <div class="my-[50px] mb-[40px]">
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email or
                             Phone number</label>
