--- a/src/app/core/layout/pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div
                                     class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                                    {{userworkspace["role_name"]}}
+                                    {{userworkspace["name"]}}
                                 </div>
                             </div>
                         </li>
