--- a/src/app/core/layout/pages/profile/editprofile/editprofile.component.html
+++ b/src/app/core/layout/pages/profile/editprofile/editprofile.component.html
@@ -13,14 +13,16 @@
             </h3>
           </div>
           <div class="flex flex-col items-center">
+            <form action="post">
             <img src="../../assets/img/hacker.png" alt="hacker" class="w-32 h-32 rounded-full object-cover bg-black">
             <p class="mt-4 text-center font-normal text-gray-500 dark:text-gray-400">
-
+          
               Username:
               <span class="font-medium">
                 #{{user.username}}
               </span>
             </p>
+            </form>
           </div>
         </div>
 
