--- a/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
+++ b/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
@@ -13,6 +13,7 @@
         <img src="../../assets/img/export.png" alt="back logo" class="w-5 h-5">
         Export
       </button>
+      <span class="text-red-600">{{ deleteError }}</span>
       <div class="flex justify-center items-center pb-4 mb-5 rounded-t border-b sm:mb-5 dark:border-gray-600">
         <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
           Accomplishment Report Details
