--- a/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
+++ b/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
@@ -74,13 +74,14 @@
                 class="flex items-center justify-center text-white bg-black hover:bg-primary-700 font-medium rounded-lg text-sm px-5 py-2 dark:bg-primary-600 dark:hover:bg-primary-700">
                 Create
               </button>
-              <span class="text-red-600">{{ createError }}</span>
+              <span *ngIf="createError" class="text-red-600">{{ createError }}</span>
             </div>
             <button type="button" (click)="navigateToEditAccomplishmentReport()"
               class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800">
               Edit
             </button>
-          </div>
+            <span *ngIf="editError" class="text-red-600">{{ editError }}</span>
+          </div>          
           
           <div class="flex space-x-4">
             <div class="flex flex-col items-start space-y-2">
