--- a/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
+++ b/src/app/core/layout/pages/accomplishmentreport/viewaccomplishmentreport/viewaccomplishmentreport.component.html
@@ -76,12 +76,15 @@
               </button>
               <span *ngIf="createError" class="text-red-600">{{ createError }}</span>
             </div>
-            <button type="button" (click)="navigateToEditAccomplishmentReport()"
-              class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800">
-              Edit
-            </button>
-            <span *ngIf="editError" class="text-red-600">{{ editError }}</span>
-          </div>          
+            <div class="flex flex-col items-start space-y-2">
+              <button type="button" (click)="navigateToEditAccomplishmentReport()"
+                class="text-gray-600 bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-800">
+                Edit
+              </button>
+              <span *ngIf="editError" class="text-red-600">{{ editError }}</span>
+            </div>
+          </div>
+              
           
           <div class="flex space-x-4">
             <div class="flex flex-col items-start space-y-2">
